--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@materializecss/materialize": "^2.1.1",
     "ejs": "^3.1.10",
     "express": "^4.20.0"
   }
