--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@materializecss/materialize": "^2.1.1",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.20.0"
+    "express": "^4.20.0",
+    "pg": "^8.12.0"
   }
 }
